k8s/applications/web/bentopdf/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bentopdf
  namespace: bentopdf
  labels:
    app: bentopdf
spec:
  type: ClusterIP
  selector:
    app: bentopdf
  ports:
    - name: http
      port: 80
      targetPort: http
