k8s/applications/web/bentopdf/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bentopdf
  namespace: bentopdf
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - pdf.home.eudald.gr
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bentopdf
          port: 80
